# moni

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
data/: sample_job.json  sample_pairs.jsonl  sample_resumes.jsonl
docs/: architecture.md  model-card.md
scripts/: benchmark_batch.py  fine_tune_lora.py
src/resume_screener/: __init__.py  cli.py  io.py  models.py  scoring.py
tests/: test_scoring.py
