[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-powered-resume-screener"
version = "0.1.0"
description = "Score and rank resumes against job descriptions with a local baseline and optional LLaMA LoRA fine-tuning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
llm = [
  "accelerate>=0.30.0",
  "bitsandbytes>=0.43.0; platform_system != 'Windows'",
  "datasets>=2.19.0",
  "peft>=0.11.0",
  "torch>=2.2.0",
  "transformers>=4.41.0",
  "trl>=0.8.6"
]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
resume-screener = "resume_screener.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

